refactor argument parser to Idris/CmdOptions.hs, identical to jfdm's but based on latest master.

--- a/idris.cabal
+++ b/idris.cabal
@@ -544,6 +544,8 @@ Library
                 , Idris.Transforms
                 , Idris.Unlit
                 , Idris.WhoCalls
+                , Idris.IdrisMain
+                , Idris.CmdOptions
 
                 , IRTS.BCImp
                 , IRTS.Bytecode
